--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ body {
 }
 
 .container {
-  max-width: 1000px;
+  max-width: 700px;
   margin: 24px auto;
   padding: 0 16px
 }
@@ -90,7 +90,9 @@ body {
   border: none;
   padding: 8px 12px;
   border-radius: 8px;
-  cursor: pointer
+  cursor: pointer;
+  width: auto;
+  margin-top: 12px;
 }
 
 .btn.small {
